--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="footerNav">
                 <ul>
                     <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="/pages/film.html">Films</a></li>
+                    <li><a href="./pages/film.html">Films</a></li>
                     <li><a href="./pages/series.html">Séries</a></li>
                 </ul>
             </div>
