--- a/pages/series.html
+++ b/pages/series.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/series.css">
+    <link rel="stylesheet" href="../styles/series.css">
     <script src="https://kit.fontawesome.com/ca3234fc7d.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,9 +51,9 @@
         <div class="footerContainer">
             <div class="footerNav">
                 <ul>
-                    <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="/pages/film.html">Films</a></li>
-                    <li><a href="./pages/series.html">Séries</a></li>
+                    <li><a href="../index.html">Accueil</a></li>
+                    <li><a href="../pages/film.html">Films</a></li>
+                    <li><a href="../pages/series.html">Séries</a></li>
                 </ul>
             </div>
             <div class="footerBottom">
