--- a/pages/favoris.html
+++ b/pages/favoris.html
@@ -58,10 +58,21 @@
                     <li><a href="../pages/series.html">Séries</a></li>
                 </ul>
             </div>
+            
+            <div class="content">
+                
+                <!-- Filter container for category buttons -->
+                <div id="filter-container" style="margin-bottom: 20px;"></div>
+
+                <!-- Liked recipes container -->
+                <div id="favs" style="display: none;"></div>
+            </div>
+
             <div class="footerBottom">
                 <p>Copyright &copy;2025 ; Conçu par <span class="designer">Karim Sebih, Jorge Santos, Raïs Mahjoub</span></p>
             </div>
         </div>
     </footer>
+    <script src="../js/favoris.js"></script>
 </body>
 </html>
